adds support for shallow routes

--- a/spec/fixtures/locales/routes.yml
+++ b/spec/fixtures/locales/routes.yml
@@ -14,4 +14,7 @@ nl:
     invitations: uitnodigingen
     accept: accepteren
     seats: stoelen
+    drivers: bestuurders
+    fast: snelle
+    cars: autos
 
